# self-hosted-discordpy-bot-public

./: .coveragerc  .gitignore  README.md  alembic.ini  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: test.yaml
src/: counter.py  db.py  logging.yml  meme.py  models.py  quiz.py  quiz_genre.py  sample.py  user.py  wiki.py
src/alembic/: env.py
src/alembic/versions/: 2c8daa292742_create_tables.py
src/tests/: test_counter.py  test_quiz.py
