[tool.poetry]
name = "discordpy-twitter"
version = "0.1.0"
description = ""
authors = ["rokkish <rokki.hobby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"
black = "^24.2.0"
pytest = "^8.0.2"
pytest-cov = "^4.1.0"
"discord.py" = "^2.3.2"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
tweepy = "^4.14.0"
bs4 = "^0.0.2"
feedparser = "^6.0.11"
sqlalchemy = "^2.0.28"
alembic = "^1.13.1"
pytest-mock = "^3.12.0"
mecab = "^0.996.3"
wikipedia = "^1.4.0"
pydantic = "^2.6.3"
python-levenshtein = "^0.25.0"
svglib = "^1.5.1"
cairosvg = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
